# kconfig-frontends

./: .gitignore  .hgignore  .version  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  README  bootstrap  configure.ac  ksync.sh
cmake/: FindLibIntl.cmake  FindLibRegex.cmake
docs/: known-issues.txt
frontends/: CMakeLists.txt  Makefile.am
frontends/conf/: Makefile.am
frontends/gconf/: Makefile.am  gconf.c  gconf.c.patch
frontends/mconf/: CMakeLists.txt  Makefile.am
frontends/nconf/: Makefile.am
frontends/qconf/: Makefile.am  qconf.cc  qconf.cc.patch
libs/: CMakeLists.txt  Makefile.am
libs/images/: CMakeLists.txt  Makefile.am  images.h  images.h.patch
libs/lxdialog/: CMakeLists.txt  Makefile.am  dialog.h  util.c
libs/parser/: CMakeLists.txt  Makefile.am  confdata.c  symbol.c  yconf.y  yconf.y.patch
libs/pdcurses-3.4/: CMakeLists.txt
libs/pdcurses-3.4/pdcurses/: CMakeLists.txt
libs/pdcurses-3.4/win32/: CMakeLists.txt  pdckbd.c
lxdialog/: Makefile.am
misc/: kernel2kfrontends.list
parser/: Makefile.am  yconf.y
scripts/: Makefile.am  kernel2kfrontends.list  ksync.list  ksync.sh  version.sh
utils/: Makefile.am  tweak  tweak.in  tweak.in.patch  tweak.patch
